--- a/Regression_model/EDA.ipynb
+++ b/Regression_model/EDA.ipynb
@@ -155,6 +155,141 @@
     "train_df = pd.read_csv(\"C:/Users/user/Desktop/nyc-taxi-trip-duration/train.csv\")\n",
     "train_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>vendor_id</th>\n",
+       "      <th>pickup_datetime</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>pickup_longitude</th>\n",
+       "      <th>pickup_latitude</th>\n",
+       "      <th>dropoff_longitude</th>\n",
+       "      <th>dropoff_latitude</th>\n",
+       "      <th>store_and_fwd_flag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>id3004672</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-06-30 23:59:58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-73.988129</td>\n",
+       "      <td>40.732029</td>\n",
+       "      <td>-73.990173</td>\n",
+       "      <td>40.756680</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>id3505355</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-06-30 23:59:53</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-73.964203</td>\n",
+       "      <td>40.679993</td>\n",
+       "      <td>-73.959808</td>\n",
+       "      <td>40.655403</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>id1217141</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-06-30 23:59:47</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-73.997437</td>\n",
+       "      <td>40.737583</td>\n",
+       "      <td>-73.986160</td>\n",
+       "      <td>40.729523</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>id2150126</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2016-06-30 23:59:41</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-73.956070</td>\n",
+       "      <td>40.771900</td>\n",
+       "      <td>-73.986427</td>\n",
+       "      <td>40.730469</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>id1598245</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-06-30 23:59:33</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-73.970215</td>\n",
+       "      <td>40.761475</td>\n",
+       "      <td>-73.961510</td>\n",
+       "      <td>40.755890</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id  vendor_id      pickup_datetime  passenger_count  \\\n",
+       "0  id3004672          1  2016-06-30 23:59:58                1   \n",
+       "1  id3505355          1  2016-06-30 23:59:53                1   \n",
+       "2  id1217141          1  2016-06-30 23:59:47                1   \n",
+       "3  id2150126          2  2016-06-30 23:59:41                1   \n",
+       "4  id1598245          1  2016-06-30 23:59:33                1   \n",
+       "\n",
+       "   pickup_longitude  pickup_latitude  dropoff_longitude  dropoff_latitude  \\\n",
+       "0        -73.988129        40.732029         -73.990173         40.756680   \n",
+       "1        -73.964203        40.679993         -73.959808         40.655403   \n",
+       "2        -73.997437        40.737583         -73.986160         40.729523   \n",
+       "3        -73.956070        40.771900         -73.986427         40.730469   \n",
+       "4        -73.970215        40.761475         -73.961510         40.755890   \n",
+       "\n",
+       "  store_and_fwd_flag  \n",
+       "0                  N  \n",
+       "1                  N  \n",
+       "2                  N  \n",
+       "3                  N  \n",
+       "4                  N  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df = pd.read_csv(\"C:/Users/user/Desktop/nyc-taxi-trip-duration/test.csv\")\n",
+    "test_df.head()"
+   ]
   }
  ],
  "metadata": {
